Fixed icon arrow position's of main menu. Fixed page title h1 font size and spacing. Fixed pages title and minor misc fixes.

--- a/src/assets/styles/flashflex/layout/_header-navbar.scss
+++ b/src/assets/styles/flashflex/layout/_header-navbar.scss
@@ -189,7 +189,7 @@
 				float: right;
 				position: relative;
 				margin-left: 1rem;
-				top: p(7);
+				top: p(2);
 				@include at;
 				@extend .at-arrows-down;
 			}
